Toques finais nas respostas

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>J&J</title>
+    <script src="https://kit.fontawesome.com/d2f3d8621c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
     <link href="css/all.min.css" rel="stylesheet">
   </head>
